--- a/src/jfbchat/ChatFrame.form
+++ b/src/jfbchat/ChatFrame.form
@@ -25,15 +25,20 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="PanelSend" alignment="0" pref="359" max="32767" attributes="0"/>
-          <Component id="ScrollMessages" alignment="0" pref="359" max="32767" attributes="0"/>
+          <Component id="PanelSend" alignment="0" pref="452" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace min="12" pref="12" max="12" attributes="0"/>
+              <Component id="ScrollMessages" pref="428" max="32767" attributes="0"/>
+              <EmptySpace min="12" pref="12" max="12" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <Component id="ScrollMessages" pref="249" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="ScrollMessages" pref="304" max="32767" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="PanelSend" min="-2" pref="99" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -45,6 +50,11 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Container class="javax.swing.JPanel" name="PanelMessages">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="fe" green="fe" red="fe" type="rgb"/>
+            </Property>
+          </Properties>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
             <Property name="axis" type="int" value="3"/>
