--- a/src/jfbchat/ChatFrame.form
+++ b/src/jfbchat/ChatFrame.form
@@ -69,6 +69,7 @@
         <Component class="javax.swing.JTextField" name="TextField">
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TextFieldActionPerformed"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="TextFieldKeyTyped"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="ButtonSend">
