--- a/src/jfbchat/ChatFrame.form
+++ b/src/jfbchat/ChatFrame.form
@@ -35,8 +35,8 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jPanel1" alignment="0" pref="463" max="32767" attributes="0"/>
-              <Component id="PanelSend" alignment="0" pref="463" max="32767" attributes="0"/>
+              <Component id="jPanel1" alignment="0" pref="529" max="32767" attributes="0"/>
+              <Component id="PanelSend" alignment="0" pref="529" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -44,7 +44,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jPanel1" min="-2" pref="322" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="PanelSend" pref="127" max="32767" attributes="0"/>
+                  <Component id="PanelSend" pref="172" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -80,7 +80,9 @@
             <Component class="javax.swing.JTextField" name="TextField">
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-                  <Border info="null"/>
+                  <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
+                    <EmptyBorder/>
+                  </Border>
                 </Property>
               </Properties>
               <Events>
