--- a/src/jfbchat/frames/JFrameAbout.form
+++ b/src/jfbchat/frames/JFrameAbout.form
@@ -26,10 +26,9 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="516" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -37,6 +36,7 @@
                       <EmptySpace pref="387" max="32767" attributes="0"/>
                       <Component id="jButtonClose" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="jScrollPane1" alignment="1" pref="516" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -46,7 +46,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" pref="377" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="146" max="32767" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jButtonClose" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -71,7 +71,7 @@
             <Property name="columns" type="int" value="20"/>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="&#xa;   JFBChat it&apos;s a simple software written in Java that let you int contact&#xa;    with yours Facebook friends without your browser.&#xa;    Copyright (C) 2011  Digitex (Giuseppe Federico)&#xa;  &#xa;    This program is free software: you can redistribute it and/or modify&#xa;    it under the terms of the GNU General Public License as published by&#xa;    the Free Software Foundation, either version 3 of the License, or&#xa;    (at your option) any later version.&#xa;  &#xa;   This program is distributed in the hope that it will be useful,&#xa;   but WITHOUT ANY WARRANTY; without even the implied warranty of&#xa;   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the&#xa;   GNU General Public License for more details.&#xa;  &#xa;   You should have received a copy of the GNU General Public License&#xa;   along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.&#xa;  &#xa;"/>
+            <Property name="text" type="java.lang.String" value="&#xa;   JFBChat it&apos;s a simple software written in Java that let you in contact&#xa;    with yours Facebook friends without your browser.&#xa;&#xa;    Author :  Digitex (Giuseppe Federico) digitex3d@gmail.com&#xa;    Webpage: http://digitex3d.altervista.org"/>
           </Properties>
         </Component>
       </SubComponents>
