Bufixes and the gui was a bit improved

--- a/src/jfbchat/ChatFrame.form
+++ b/src/jfbchat/ChatFrame.form
@@ -61,7 +61,7 @@
                 <Container class="javax.swing.JPanel" name="PanelMessages">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="fe" green="fe" red="fe" type="rgb"/>
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                   </Properties>
 
