--- a/src/jfbchat/MainFrame.form
+++ b/src/jfbchat/MainFrame.form
@@ -220,6 +220,12 @@
           </SubComponents>
         </Container>
         <Container class="javax.swing.JScrollPane" name="ContactListScrollPane">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="horizontalScrollBarPolicy" type="int" value="31"/>
+          </Properties>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
