--- a/src/jfbchat/frames/MainFrame.form
+++ b/src/jfbchat/frames/MainFrame.form
@@ -236,6 +236,9 @@
           <SubComponents>
             <Container class="javax.swing.JPanel" name="ContactListPanel">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="null"/>
                 </Property>
