Added cache avatars feautre

--- a/src/jfbchat/frames/preferences/BehaviorPanel.form
+++ b/src/jfbchat/frames/preferences/BehaviorPanel.form
@@ -1,6 +1,11 @@
 <?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <Properties>
+    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[432, 107]"/>
+    </Property>
+  </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -28,7 +33,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="14" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -46,10 +51,13 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="CheckDownloadAvatar" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="200" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="CheckDownloadAvatar" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="checkSaveAvaToCache" alignment="0" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -58,6 +66,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="CheckDownloadAvatar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
+                  <Component id="checkSaveAvaToCache" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -65,10 +74,20 @@
       <SubComponents>
         <Component class="javax.swing.JCheckBox" name="CheckDownloadAvatar">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Download avatars"/>
+            <Property name="text" type="java.lang.String" value="Download avatars  (Restart needed)"/>
+            <Property name="toolTipText" type="java.lang.String" value="Download avatar images at the login"/>
           </Properties>
           <Events>
             <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="CheckDownloadAvatarItemStateChanged"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JCheckBox" name="checkSaveAvaToCache">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Save avatars to a local directory (Restart needed) "/>
+            <Property name="toolTipText" type="java.lang.String" value="Save images to a local directory for better performances"/>
+          </Properties>
+          <Events>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="checkSaveAvaToCacheItemStateChanged"/>
           </Events>
         </Component>
       </SubComponents>
